tests/compile_fail/deriving_json_sum_non_serializable.mpl
type BadSum do
  HasPid(Pid)
end deriving(Json)

fn main() do
  0
end
